--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,6 +11,7 @@ jobs:
         uses: actions/checkout@v1  
         with:
           ref: main
+          path: ''
           repository: ${{ secrets.REPOSITORY_PATH }}
           token: ${{ secrets.ACCESS_TOKEN }}
 
